syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.service1";
option java_outer_classname = "SmartTillImp1";



// Interface exported by the server.
service SmartTill {
  // bi-directional streaming
  rpc smartTill (stream tillRequest) returns (stream tillResponse) {}
  // Unary 
  rpc seatManager (seatRequest) returns (seatResponse) {}
    
}

message tillRequest {
  string orderInput = 1;  
}

message tillResponse {
  String totalOrdersOutput = 1;
}

message seatRequest {
    String seats = 1;
}
message seatResponse {
    String totalSeats = 2;
}